Fix dropdown option for stairs in index.html and remove two unused Hamiltonian path JSON files to streamline the project structure.

--- a/index.html
+++ b/index.html
@@ -2014,7 +2014,7 @@
               <option value="hypnotic">Hypnotic</option>
               <option value="spaghetti">Spaghetti</option>
               <option value="squiggle">Squiggle</option>
-              <option value="hypnotic">Stairs</option>
+              <option value="stairs">Stairs</option>
             </select>
           </div>
           <div style="display: flex; gap: 10px; flex-wrap: wrap;">
